--- a/src/main/webapp/cadastrarpersonagem.xhtml
+++ b/src/main/webapp/cadastrarpersonagem.xhtml
@@ -4,28 +4,27 @@
 <h:head>
 	<title>Cadastro de Jogo</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></link>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </h:head>
 <h:body>
-	<h:form id="formulario">
-		<h:outputLabel value="Código"></h:outputLabel>
-		<br></br>
-		<h:inputText id="codigoPersonagem" value="#{personagemController.personagem.codigo}" required="true" ></h:inputText>
-		<h:message for="codigoPersonagem"></h:message>
-		<br></br>
-		<h:outputLabel value="Nome"></h:outputLabel>
-		<br></br>
-		<h:inputText id="nomePersonagem" value="#{personagemController.personagem.nome}" required="true"></h:inputText>
-		<h:message for="nomePersonagem"></h:message>
-		<br></br>
-		<br></br>
-		<h:selectOneMenu value="#{personagemController.nomeJogoSelecionado}">
-			<f:selectItems value="#{personagemController.jogos}" var="a" itemLabel="#{a.nome}">
-			</f:selectItems>
-		</h:selectOneMenu>
-		<br></br>
-		<br></br>
-		<h:commandButton value="Confirmar" action="#{personagemController.confirmarCadastro}">
-		</h:commandButton>
-	</h:form>		
+	<div class="container mt-4">
+		<div class="row col-lg-12 text-center">
+			<h:form id="formulario">
+				<h:outputLabel value="Código"></h:outputLabel>
+				<h:inputText id="codigoPersonagem" value="#{personagemController.personagem.codigo}" required="true" ></h:inputText>
+				<h:message for="codigoPersonagem"></h:message>
+				<h:outputLabel value="Nome"></h:outputLabel>
+				<h:inputText id="nomePersonagem" value="#{personagemController.personagem.nome}" required="true"></h:inputText>
+				<h:message for="nomePersonagem"></h:message>
+				<h:selectOneMenu value="#{personagemController.nomeJogoSelecionado}">
+					<f:selectItems value="#{personagemController.jogos}" var="a" itemLabel="#{a.nome}">
+					</f:selectItems>
+				</h:selectOneMenu>
+				<h:commandButton value="Confirmar" action="#{personagemController.confirmarCadastro}">
+				</h:commandButton>
+			</h:form>
+		</div>
+	</div>	
 </h:body>
 </html>
