--- a/src/main/webapp/consultardesenvolvedora.xhtml
+++ b/src/main/webapp/consultardesenvolvedora.xhtml
@@ -4,42 +4,52 @@
 <h:head>
 	<title>Consultar Desenvolvedoras</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></link>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	
 </h:head>
 <h:body>
-	<h:form>
-		<h:messages warnClass="mensagemAlerta" fatalClass="mensagemFatal" 
-			showDetail="true"  showSummary="true">
-		</h:messages>
-		<h:dataTable value="#{desenvolvedoraController.desenvolvedorasRecuperadas}" var="d" border="1">
-			<h:column>
-				<f:facet name="header">
-					<h:outputLabel value="Codigo"></h:outputLabel> 
-				</f:facet>
-				<h:outputLabel value="#{d.codigo}"></h:outputLabel> 
-			</h:column>
-			<h:column>
-				<f:facet name="header">
-					<h:outputLabel value="Nome"></h:outputLabel> 
-				</f:facet>
-				<h:outputLabel value="#{d.nome}"></h:outputLabel> 
-			</h:column>
-			<h:column>
-				<f:facet name="header">
-					<h:outputLabel value="Ações"></h:outputLabel> 
-				</f:facet>
-				<h:commandButton value="Del." action="#{desenvolvedoraController.removerDesenvolvedora(d)}" onclick="return confirm('Confirma a exclusao?')"></h:commandButton>
-			</h:column>
-		</h:dataTable>
-		<br>
-			<h:commandButton value="Novo Cadastro" 
-				action="#{desenvolvedoraController.prepararCadastro}" >
-			</h:commandButton> 
-			<br></br>
-			<br></br>
-			<h:commandButton value="Voltar" 
-				action="#{desenvolvedoraController.prepararMenu}" >
-			</h:commandButton> 
-		</br>
-	</h:form>		
+	<div class="container mt-4">
+		<div class="row col-lg-12 text-center">
+			<H1>Lista de Desenvolvedoras</H1>
+			<h:form>
+				<h:messages warnClass="mensagemAlerta" fatalClass="mensagemFatal" 
+					showDetail="true"  showSummary="true">
+				</h:messages>
+				<h:dataTable value="#{desenvolvedoraController.desenvolvedorasRecuperadas}" var="d" border="1" class="table table-striped table-hover">
+					<h:column>
+						<f:facet name="header">
+							<h:outputLabel value="Codigo"></h:outputLabel> 
+						</f:facet>
+						<h:outputLabel value="#{d.codigo}"></h:outputLabel> 
+					</h:column>
+					<h:column>
+						<f:facet name="header">
+							<h:outputLabel value="Nome"></h:outputLabel> 
+						</f:facet>
+						<h:outputLabel value="#{d.nome}"></h:outputLabel> 
+					</h:column>
+					<h:column>
+						<f:facet name="header">
+							<h:outputLabel value="Ações"></h:outputLabel> 
+						</f:facet>
+						<h:commandButton value="Excluir" action="#{desenvolvedoraController.removerDesenvolvedora(d)}" onclick="return confirm('Confirma a exclusao?')" class="btn btn-danger"></h:commandButton>
+					</h:column>
+				</h:dataTable>
+				<div class="row">
+					<div class="col-lg-2">
+						<h:commandButton value="Voltar" 
+								action="#{desenvolvedoraController.prepararMenu}" class="btn btn-warning" >
+						</h:commandButton> 
+					</div>
+					<div class="col-lg-2">
+						<h:commandButton value="Novo Cadastro" 
+							action="#{desenvolvedoraController.prepararCadastro}" class="btn btn-success">
+						</h:commandButton> 
+					</div>
+				</div>
+			</h:form>
+		</div>
+	</div>
 </h:body>
 </html>
