--- a/src/main/webapp/menuprincipal.xhtml
+++ b/src/main/webapp/menuprincipal.xhtml
@@ -4,22 +4,25 @@
 <h:head>
 	<title>Menu Principal</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></link>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </h:head>
 <h:body>
-	<h:form>
-		<h:commandButton value="Desenvolvedora" 
-			action="#{desenvolvedoraController.prepararConsulta}">
-		</h:commandButton>
-		<br></br>
-		<br></br>
-		<h:commandButton value="Jogo" 
-			action="#{jogoController.prepararConsulta}">
-		</h:commandButton>	
-		<br></br>
-		<br></br>
-		<h:commandButton value="Personagem" 
-			action="#{personagemController.prepararConsulta}">
-		</h:commandButton>			
-	</h:form>		
+	<div class="container mt-4">
+		<div class="row col-lg-12 text-center">
+			<h1>BEM VINDO</h1>
+			<h:form>
+				<h:commandButton class="btn btn-primary" value="Desenvolvedora" 
+					action="#{desenvolvedoraController.prepararConsulta}">
+				</h:commandButton>
+				<h:commandButton class="btn btn-primary" value="Jogo" 
+					action="#{jogoController.prepararConsulta}">
+				</h:commandButton>	
+				<h:commandButton class="btn btn-primary" value="Personagem" 
+					action="#{personagemController.prepararConsulta}">
+				</h:commandButton>			
+			</h:form>			
+		</div>
+	</div>	
 </h:body>
 </html>
