--- a/src/main/webapp/cadastrardesenvolvedora.xhtml
+++ b/src/main/webapp/cadastrardesenvolvedora.xhtml
@@ -7,19 +7,28 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></link>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </h:head>
+
 <h:body>	
-	<div class="container mt-4">
+	<div class="container mt-4 d-flex justify-content-center">
 		<div class="row col-lg-12 text-center">
+			<h1>Cadastro de Desenvolvedora</h1>
 			<h:form id="formulario">
-				<h:outputLabel value="Código"></h:outputLabel>
-				<h:inputText id="codigoDesenvolvedora" value="#{desenvolvedoraController.desenvolvedora.codigo}" required="true" ></h:inputText>
-				<h:message for="codigoDesenvolvedora"></h:message>
-				<h:outputLabel value="Nome"></h:outputLabel>
-				<h:inputText id="nomeDesenvolvedora" value="#{desenvolvedoraController.desenvolvedora.nome}" required="true"></h:inputText>
-				<h:message for="nomeDesenvolvedora"></h:message>
-				<div>
-					<h:commandButton value="Confirmar" action="#{desenvolvedoraController.confirmarCadastro}">
-					</h:commandButton>
+				<div class="form-group mt-4">
+					<h:outputLabel >Código</h:outputLabel>
+					<h:inputText id="codigoDesenvolvedora" value="#{desenvolvedoraController.desenvolvedora.codigo}" required="true"></h:inputText>
+					<h:message for="codigoDesenvolvedora"></h:message>
+				</div>
+				<div class="form-group mt-4">
+					<h:outputLabel value="Nome"></h:outputLabel>
+					<h:inputText id="nomeDesenvolvedora" value="#{desenvolvedoraController.desenvolvedora.nome}" required="true"></h:inputText>
+					<h:message for="nomeDesenvolvedora"></h:message>
+				</div>
+				
+				<div class="container mt-4 d-flex justify-content-center">
+					<div class="col-lg-12 text-center">
+						<h:commandButton value="Voltar" action="consultardesenvolvedora.xhtml" immediate="true" class="btn btn-warning"/>
+						<h:commandButton value="Confirmar" action="#{desenvolvedoraController.confirmarCadastro}" class="btn btn-success"></h:commandButton>
+					</div>
 				</div>
 			</h:form>
 		</div>
