--- a/src/main/webapp/cadastrarpersonagem.xhtml
+++ b/src/main/webapp/cadastrarpersonagem.xhtml
@@ -10,19 +10,31 @@
 <h:body>
 	<div class="container mt-4">
 		<div class="row col-lg-12 text-center">
+		<h1>Cadastrar Personagens</h1>
 			<h:form id="formulario">
-				<h:outputLabel value="Código"></h:outputLabel>
-				<h:inputText id="codigoPersonagem" value="#{personagemController.personagem.codigo}" required="true" ></h:inputText>
-				<h:message for="codigoPersonagem"></h:message>
-				<h:outputLabel value="Nome"></h:outputLabel>
-				<h:inputText id="nomePersonagem" value="#{personagemController.personagem.nome}" required="true"></h:inputText>
-				<h:message for="nomePersonagem"></h:message>
-				<h:selectOneMenu value="#{personagemController.nomeJogoSelecionado}">
-					<f:selectItems value="#{personagemController.jogos}" var="a" itemLabel="#{a.nome}">
-					</f:selectItems>
-				</h:selectOneMenu>
-				<h:commandButton value="Confirmar" action="#{personagemController.confirmarCadastro}">
-				</h:commandButton>
+				<div class="form-group mt-4">
+					<h:outputLabel value="Código"></h:outputLabel>
+					<h:inputText id="codigoPersonagem" value="#{personagemController.personagem.codigo}" required="true" ></h:inputText>
+					<h:message for="codigoPersonagem"></h:message>
+				</div>
+				<div class="form-group mt-4">
+					<h:outputLabel value="Nome"></h:outputLabel>
+					<h:inputText id="nomePersonagem" value="#{personagemController.personagem.nome}" required="true"></h:inputText>
+					<h:message for="nomePersonagem"></h:message>
+				</div>
+				<div class="form-group mt-4">
+					<h:selectOneMenu value="#{personagemController.nomeJogoSelecionado}">
+						<f:selectItems value="#{personagemController.jogos}" var="a" itemLabel="#{a.nome}">
+						</f:selectItems>
+					</h:selectOneMenu>
+				</div>
+				<div class="form-group mt-4">
+					<h:commandButton value="Voltar" action="consultarpersonagem.xhtml" immediate="true" class="btn btn-warning"/>
+					<h:commandButton value="Confirmar" action="#{personagemController.confirmarCadastro}" class="btn btn-success">
+					</h:commandButton>
+				
+				</div>
+			
 			</h:form>
 		</div>
 	</div>	
