--- a/src/main/webapp/consultardesenvolvedora.xhtml
+++ b/src/main/webapp/consultardesenvolvedora.xhtml
@@ -6,8 +6,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></link>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-	
 </h:head>
+
 <h:body>
 	<div class="container mt-4">
 		<div class="row col-lg-12 text-center">
@@ -33,7 +33,8 @@
 						<f:facet name="header">
 							<h:outputLabel value="Ações"></h:outputLabel> 
 						</f:facet>
-						<h:commandButton value="Excluir" action="#{desenvolvedoraController.removerDesenvolvedora(d)}" onclick="return confirm('Confirma a exclusao?')" class="btn btn-danger"></h:commandButton>
+						<h:commandButton value="Excluir" action="#{desenvolvedoraController.removerDesenvolvedora(d)}" onclick="return confirm('Confirma a exclusao?')" class="btn btn-danger">
+        				<h:commandButton value="Editar" action="#{desenvolvedoraController.prepararEdicao(d)}" class="btn btn-primary"/></h:commandButton>
 					</h:column>
 				</h:dataTable>
 				<div class="row">
