--- a/src/main/webapp/menuprincipal.xhtml
+++ b/src/main/webapp/menuprincipal.xhtml
@@ -12,10 +12,10 @@
 		<div class="row col-lg-12 text-center">
 			<h1>BEM VINDO</h1>
 			<h:form>
-				<h:commandButton class="btn btn-primary" value="Desenvolvedora" 
+				<h:commandButton class="btn btn-primary me-2" value="Desenvolvedora" 
 					action="#{desenvolvedoraController.prepararConsulta}">
 				</h:commandButton>
-				<h:commandButton class="btn btn-primary" value="Jogo" 
+				<h:commandButton class="btn btn-primary me-2" value="Jogo" 
 					action="#{jogoController.prepararConsulta}">
 				</h:commandButton>	
 				<h:commandButton class="btn btn-primary" value="Personagem" 
