--- a/src/main/webapp/cadastrardesenvolvedora.xhtml
+++ b/src/main/webapp/cadastrardesenvolvedora.xhtml
@@ -10,23 +10,23 @@
 
 <h:body>	
 	<div class="container mt-4 d-flex justify-content-center">
-		<div class="row col-lg-12 text-center">
+		<div class="row col-lg-6 text-center">
 			<h1>Cadastro de Desenvolvedora</h1>
 			<h:form id="formulario">
 				<div class="form-group mt-4">
 					<h:outputLabel >Código</h:outputLabel>
-					<h:inputText id="codigoDesenvolvedora" value="#{desenvolvedoraController.desenvolvedora.codigo}" required="true"></h:inputText>
+					<h:inputText class="form-control" id="codigoDesenvolvedora" value="#{desenvolvedoraController.desenvolvedora.codigo}" required="true"></h:inputText>
 					<h:message for="codigoDesenvolvedora"></h:message>
 				</div>
-				<div class="form-group mt-4">
+				<div class="form-group mt-4 ">
 					<h:outputLabel value="Nome"></h:outputLabel>
-					<h:inputText id="nomeDesenvolvedora" value="#{desenvolvedoraController.desenvolvedora.nome}" required="true"></h:inputText>
+					<h:inputText class="form-control col-lg-4" id="nomeDesenvolvedora" value="#{desenvolvedoraController.desenvolvedora.nome}" required="true"></h:inputText>
 					<h:message for="nomeDesenvolvedora"></h:message>
 				</div>
 				
 				<div class="container mt-4 d-flex justify-content-center">
 					<div class="col-lg-12 text-center">
-						<h:commandButton value="Voltar" action="consultardesenvolvedora.xhtml" immediate="true" class="btn btn-warning"/>
+						<h:commandButton value="Voltar" action="consultardesenvolvedora.xhtml" immediate="true" class="btn btn-warning me-2"/>
 						<h:commandButton value="Confirmar" action="#{desenvolvedoraController.confirmarCadastro}" class="btn btn-success"></h:commandButton>
 					</div>
 				</div>
