--- a/src/main/webapp/cadastrarjogo.xhtml
+++ b/src/main/webapp/cadastrarjogo.xhtml
@@ -8,29 +8,30 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </h:head>
 <h:body>
-	<div class="container mt-4">
-		<div class="row col-lg-12 text-center">
+	<div class="container mt-4 d-flex justify-content-center">
+		<div class="row col-lg-6 text-center">
 			<h1>Cadastro de Jogos</h1>
 			<h:form id="formulario">
 				<div class="form-group mt-4">
 					<h:outputLabel value="Código"></h:outputLabel>
-					<h:inputText id="codigoJogo" value="#{jogoController.jogo.codigo}" required="true" ></h:inputText>
+					<h:inputText class="form-control" id="codigoJogo" value="#{jogoController.jogo.codigo}" required="true" ></h:inputText>
 					<h:message for="codigoJogo"></h:message>
 				</div>
 				<div class="form-group mt-4">
 					<h:outputLabel value="Nome"></h:outputLabel>
-					<h:inputText id="nomeJogo" value="#{jogoController.jogo.nome}" required="true"></h:inputText>
+					<h:inputText class="form-control" id="nomeJogo" value="#{jogoController.jogo.nome}" required="true"></h:inputText>
 					<h:message for="nomeJogo"></h:message>
 				</div>
 				<div class="form-group mt-4">
-						<h:selectOneMenu id="desenvolvedora" value="#{jogoController.nomeDesenvolvedoraSelecionada}" required="true" requiredMessage="A desenvolvedora é obrigatória.">
+						<h:outputLabel value="Selecione uma Desenvolvedora"></h:outputLabel>
+						<h:selectOneMenu class="form-select" id="desenvolvedora" value="#{jogoController.nomeDesenvolvedoraSelecionada}" required="true" requiredMessage="A desenvolvedora é obrigatória.">
 					    <f:selectItem itemLabel="-- Selecione --" itemValue="" />
 					    <f:selectItems value="#{jogoController.desenvolvedoras}" var="desenvolvedora" itemLabel="#{desenvolvedora.nome}" itemValue="#{desenvolvedora.nome}" />
 					</h:selectOneMenu>
 				</div>
 				<div class="container mt-4 d-flex justify-content-center">
 					<div class="col-lg-12 text-center">
-						<h:commandButton value="Voltar" action="consultarjogo.xhtml" immediate="true" class="btn btn-warning"/>
+						<h:commandButton value="Voltar" action="consultarjogo.xhtml" immediate="true" class="btn btn-warning me-2"/>
 						<h:commandButton value="Confirmar" action="#{jogoController.confirmarCadastro}" class="btn btn-success"></h:commandButton>
 					</div>
 				</div>
