--- a/src/main/webapp/cadastrarpersonagem.xhtml
+++ b/src/main/webapp/cadastrarpersonagem.xhtml
@@ -8,28 +8,29 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </h:head>
 <h:body>
-	<div class="container mt-4">
-		<div class="row col-lg-12 text-center">
+	<div class="container mt-4 d-flex justify-content-center">
+		<div class="row col-lg-6 text-center">
 		<h1>Cadastrar Personagens</h1>
 			<h:form id="formulario">
 				<div class="form-group mt-4">
 					<h:outputLabel value="Código"></h:outputLabel>
-					<h:inputText id="codigoPersonagem" value="#{personagemController.personagem.codigo}" required="true" ></h:inputText>
+					<h:inputText class="form-control" id="codigoPersonagem" value="#{personagemController.personagem.codigo}" required="true" ></h:inputText>
 					<h:message for="codigoPersonagem"></h:message>
 				</div>
 				<div class="form-group mt-4">
 					<h:outputLabel value="Nome"></h:outputLabel>
-					<h:inputText id="nomePersonagem" value="#{personagemController.personagem.nome}" required="true"></h:inputText>
+					<h:inputText class="form-control" id="nomePersonagem" value="#{personagemController.personagem.nome}" required="true"></h:inputText>
 					<h:message for="nomePersonagem"></h:message>
 				</div>
 				<div class="form-group mt-4">
-					<h:selectOneMenu value="#{personagemController.nomeJogoSelecionado}">
+					<h:outputLabel value="Selecione um Jogo" />
+					<h:selectOneMenu class="form-select" value="#{personagemController.nomeJogoSelecionado}">
 						<f:selectItems value="#{personagemController.jogos}" var="a" itemLabel="#{a.nome}">
 						</f:selectItems>
 					</h:selectOneMenu>
 				</div>
 				<div class="form-group mt-4">
-					<h:commandButton value="Voltar" action="consultarpersonagem.xhtml" immediate="true" class="btn btn-warning"/>
+					<h:commandButton value="Voltar" action="consultarpersonagem.xhtml" immediate="true" class="btn btn-warning me-2"/>
 					<h:commandButton value="Confirmar" action="#{personagemController.confirmarCadastro}" class="btn btn-success">
 					</h:commandButton>
 				
