--- a/src/main/webapp/consultardesenvolvedora.xhtml
+++ b/src/main/webapp/consultardesenvolvedora.xhtml
@@ -33,17 +33,15 @@
 						<f:facet name="header">
 							<h:outputLabel value="Ações"></h:outputLabel> 
 						</f:facet>
-						<h:commandButton value="Excluir" action="#{desenvolvedoraController.removerDesenvolvedora(d)}" onclick="return confirm('Confirma a exclusao?')" class="btn btn-danger">
+						<h:commandButton value="Excluir" action="#{desenvolvedoraController.removerDesenvolvedora(d)}" onclick="return confirm('Confirma a exclusao?')" class="btn btn-danger me-2">
         				<h:commandButton value="Editar" action="#{desenvolvedoraController.prepararEdicao(d)}" class="btn btn-primary"/></h:commandButton>
 					</h:column>
 				</h:dataTable>
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-lg-4">
 						<h:commandButton value="Voltar" 
-								action="#{desenvolvedoraController.prepararMenu}" class="btn btn-warning" >
+								action="#{desenvolvedoraController.prepararMenu}" class="btn btn-warning me-2" >
 						</h:commandButton> 
-					</div>
-					<div class="col-lg-2">
 						<h:commandButton value="Novo Cadastro" 
 							action="#{desenvolvedoraController.prepararCadastro}" class="btn btn-success">
 						</h:commandButton> 
